# vdraw-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  vdraw.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  vdraw.rockspec  vdraw_sdk.lua  vdraw_types.lua
php/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  composer.json  config.php  features.php  vdraw_sdk.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  vdraw_sdk.py  vdraw_types.py
py/core/: context.py  control.py  error.py  utility_type.py
py/entity/: username_generation_entity.py
py/feature/: cache_feature.py  clienttrack_feature.py  debug_feature.py  paging_feature.py  proxy_feature.py  ratelimit_feature.py  streaming_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_username_generation_entity.py
py/utility/: clean.py  done.py  feature_add.py  feature_hook.py  fetcher.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_result.py  make_spec.py  make_url.py  prepare_auth.py  prepare_body.py  prepare_headers.py  prepare_method.py  prepare_params.py  result_basic.py  transform_request.py
(+410 files in other folders)
